# COGNET-STROKE

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-control_rsn.ipynb  02-CDR_validation.ipynb
src/: cdr.py  utils.py
src/generate_cdr_report/: cdr_report_workflow.py
src/generate_cdr_report/data/: __init__.py
src/generate_concept_maps/: concept_maps_workflow.py
src/generate_concept_maps/data/: LDA100_term_to_concept.json  LDA50_term_to_concept.json  __init__.py
